ido-tth/main/default/objects/Contact/fields/tth_Base_Loyalty_Points__c.field-meta.xml
<CustomField>
    <fullName>tth_Base_Loyalty_Points__c</fullName>
    <defaultValue>25000</defaultValue>
    <description>Not shown but used as the lowest level of points on top of which all loyalty calculations will occur</description>
    <label>Base Loyalty Points</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>