ido-tth/main/default/objects/Contact/fields/tth_Business_Traveler__c.field-meta.xml
<CustomField>
    <fullName>tth_Business_Traveler__c</fullName>
    <description>Flags guest as a business traveler</description>
    <label>Business Traveler</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tth_Yes_No</valueSetName>
    </valueSet>
</CustomField>