ido-tth/main/default/objects/Contact/fields/tth_Community_Member__c.field-meta.xml
<CustomField>
    <fullName>tth_Community_Member__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is the traveler a registered member of our exclusive traveler community?</description>
    <label>Community Member</label>
    <type>Checkbox</type>
</CustomField>