ido-tth/main/default/objects/Contact/fields/tth_Experiencing_Trip_Disruption__c.field-meta.xml
<CustomField>
    <fullName>tth_Experiencing_Trip_Disruption__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Demo trigger field to indicate that the traveler is experiencing some sort of disruption. May be used to influence Chatbot context, NBA offers, Component Visibility, etc</description>
    <label>Experiencing Trip Disruption</label>
    <type>Checkbox</type>
</CustomField>