ido-tth/main/default/objects/Contact/fields/tth_Lifetime_Loyalty_Points__c.field-meta.xml
<CustomField>
    <fullName>tth_Lifetime_Loyalty_Points__c</fullName>
    <description>Sum of base loyalty points plus Accrued event points - Shows the Total number of points gained by the member during their entire length of membership</description>
    <formula>tth_Base_Loyalty_Points__c +  tth_Accrued_Loyalty_Event_Points__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total number of points earned during entirety of membership</inlineHelpText>
    <label>Lifetime Loyalty Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>