ido-tth/main/default/objects/Contact/fields/tth_Loyalty_Program_Number__c.field-meta.xml
<CustomField>
    <fullName>tth_Loyalty_Program_Number__c</fullName>
    <description>Traveler&#39;s loyalty membership idenfitier</description>
    <label>Loyalty Program Number</label>
    <length>12</length>
    <type>Text</type>
</CustomField>