ido-tth/main/default/objects/Contact/fields/tth_Loyalty_Status__c.field-meta.xml
<CustomField>
    <fullName>tth_Loyalty_Status__c</fullName>
    <description>What is the traveler&#39;s current loyalty status/level?</description>
    <label>Loyalty Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tth_Loyalty_Status_Levels</valueSetName>
    </valueSet>
</CustomField>