ido-tth/main/default/objects/Contact/fields/tth_Medical_Alerts__c.field-meta.xml
<CustomField>
    <fullName>tth_Medical_Alerts__c</fullName>
    <description>Within traveler preferences, any medical conditions or alerts that may need to be known by travel provider</description>
    <label>Medical Alerts</label>
    <type>TextArea</type>
</CustomField>