ido-tth/main/default/objects/Contact/fields/tth_Mobile_App_Installed__c.field-meta.xml
<CustomField>
    <fullName>tth_Mobile_App_Installed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Has the traveler installed our mobile application yet?</description>
    <label>Mobile App Installed</label>
    <type>Checkbox</type>
</CustomField>