ido-tth/main/default/objects/Contact/fields/tth_Next_Destination__c.field-meta.xml
<CustomField>
    <fullName>tth_Next_Destination__c</fullName>
    <label>Next Destination</label>
    <length>255</length>
    <type>Text</type>
</CustomField>