ido-tth/main/default/objects/Contact/fields/tth_Next_Level__c.field-meta.xml
<CustomField>
    <fullName>tth_Next_Level__c</fullName>
    <defaultValue>&quot;Silver&quot;</defaultValue>
    <description>The name of the next loyalty status level this traveler can attain</description>
    <label>Next Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tth_Loyalty_Status_Levels</valueSetName>
    </valueSet>
</CustomField>