ido-tth/main/default/objects/Contact/fields/tth_Next_Loyalty_Level_Threshold__c.field-meta.xml
<CustomField>
    <fullName>tth_Next_Loyalty_Level_Threshold__c</fullName>
    <defaultValue>20000</defaultValue>
    <description>Is a threshold level and will indicate when how many Loyalty Event points are required to advance to the next tier. Is used by the &quot;Points to Next Level&quot; formula field</description>
    <label>Next Loyalty Level Threshold</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>