ido-tth/main/default/objects/Contact/fields/tth_Next_Trip__c.field-meta.xml
<CustomField>
    <fullName>tth_Next_Trip__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>What is the traveler&#39;s next trip/destination?</description>
    <label>Next Trip</label>
    <referenceTo>tth_Trip__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>