ido-tth/main/default/objects/Contact/fields/tth_Personal_Traveler__c.field-meta.xml
<CustomField>
    <fullName>tth_Personal_Traveler__c</fullName>
    <description>Guest travels with us for personal reasons (e.g. non-business)</description>
    <label>Personal Traveler</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tth_Yes_No</valueSetName>
    </valueSet>
</CustomField>