ido-tth/main/default/objects/Contact/fields/tth_Points_to_Next_Level__c.field-meta.xml
<CustomField>
    <fullName>tth_Points_to_Next_Level__c</fullName>
    <description>The number of points the traveler requires to be promoted to the next loyalty level. Is Next_Loyalty_Level_Threshold minus Accrued_Loyalty_Event_Points.</description>
    <formula>IF(tth_Next_Loyalty_Level_Threshold__c -  tth_Accrued_Loyalty_Event_Points__c &gt;0, tth_Next_Loyalty_Level_Threshold__c -  tth_Accrued_Loyalty_Event_Points__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Number of points required to reach the next Loyalty Status Level</inlineHelpText>
    <label>Points to Next Level</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>