ido-tth/main/default/objects/Contact/fields/tth_preference_air_Pref_Dep_Airport__c.field-meta.xml
<CustomField>
    <fullName>tth_preference_air_Pref_Dep_Airport__c</fullName>
    <description>Airline preferences - departure airport preference
Could be airport code or full name of city</description>
    <label>Preferred Departure Airport</label>
    <length>255</length>
    <type>Text</type>
</CustomField>