ido-tth/main/default/objects/Contact/fields/tth_preference_air_Seat__c.field-meta.xml
<CustomField>
    <fullName>tth_preference_air_Seat__c</fullName>
    <description>Airline preferences - seating preference</description>
    <label>Seat</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aisle</fullName>
                <default>true</default>
                <label>Aisle</label>
            </value>
            <value>
                <fullName>Window</fullName>
            </value>
            <value>
                <fullName>Middle</fullName>
            </value>
            <value>
                <fullName>Don&#39;t care</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>