ido-tth/main/default/objects/Contact/fields/tth_preference_air_Seat_Section__c.field-meta.xml
<CustomField>
    <fullName>tth_preference_air_Seat_Section__c</fullName>
    <description>Airline preferences - seat section</description>
    <label>Seat Section</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Forward</fullName>
                <default>true</default>
                <label>Forward</label>
            </value>
            <value>
                <fullName>Bulkhead</fullName>
            </value>
            <value>
                <fullName>Exit Row</fullName>
            </value>
            <value>
                <fullName>Rear</fullName>
            </value>
            <value>
                <fullName>Don&#39;t Care</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>