ido-tth/main/default/objects/Contact/fields/tth_preference_air_Special_Meals__c.field-meta.xml
<CustomField>
    <fullName>tth_preference_air_Special_Meals__c</fullName>
    <description>Airline preferences - Special Meal request options</description>
    <label>Special Meals</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Regular Meal</fullName>
                <default>true</default>
                <label>Regular Meal</label>
            </value>
            <value>
                <fullName>Bland / Low Residue</fullName>
            </value>
            <value>
                <fullName>Child Meal</fullName>
            </value>
            <value>
                <fullName>Diabetic Meal</fullName>
            </value>
            <value>
                <fullName>Fruit Platter</fullName>
            </value>
            <value>
                <fullName>Gluten Free Meal</fullName>
            </value>
            <value>
                <fullName>Hindu Meal</fullName>
            </value>
            <value>
                <fullName>Infant / Baby Meal</fullName>
            </value>
            <value>
                <fullName>Kosher Meal</fullName>
            </value>
            <value>
                <fullName>Low Calorie Meal</fullName>
            </value>
            <value>
                <fullName>Low Salt / Sodium Meal</fullName>
            </value>
            <value>
                <fullName>Muslim Meal</fullName>
            </value>
            <value>
                <fullName>No Salt Meal</fullName>
            </value>
            <value>
                <fullName>Non Lactose Meal</fullName>
            </value>
            <value>
                <fullName>Peanut-Free Meal</fullName>
            </value>
            <value>
                <fullName>Seafood Meal</fullName>
            </value>
            <value>
                <fullName>Veg Lacto-Ovo</fullName>
            </value>
            <value>
                <fullName>Vegetarian</fullName>
            </value>
            <value>
                <fullName>Vegetarian Kosher</fullName>
            </value>
            <value>
                <fullName>Vegetarian, Raw</fullName>
            </value>
            <value>
                <fullName>Vegetarian Hindu Meal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>