ido-tth/main/default/objects/Contact/fields/tth_preference_hotel_Accessibility_Needs__c.field-meta.xml
<CustomField>
    <fullName>tth_preference_hotel_Accessibility_Needs__c</fullName>
    <description>Hotel preferences - required accessibility requirements</description>
    <label>Accessibility Needs</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Wheelchair access</fullName>
            </value>
            <value>
                <fullName>Blind accessible</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>