ido-tth/main/default/objects/Contact/fields/tth_preference_hotel_Hotel_Amenities__c.field-meta.xml
<CustomField>
    <fullName>tth_preference_hotel_Hotel_Amenities__c</fullName>
    <description>Hotel preferences - what amenities are desired</description>
    <label>Hotel Amenities</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gym</fullName>
            </value>
            <value>
                <fullName>Pool</fullName>
            </value>
            <value>
                <fullName>Restaurant</fullName>
            </value>
            <value>
                <fullName>Room Service</fullName>
            </value>
            <value>
                <fullName>Early Check-in</fullName>
            </value>
            <value>
                <fullName>Late Check-in</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>