ido-tth/main/default/objects/Contact/fields/tth_preference_hotel_Room_Type__c.field-meta.xml
<CustomField>
    <fullName>tth_preference_hotel_Room_Type__c</fullName>
    <description>Hotel preferences - what type of room configuration is preferred</description>
    <label>Room Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>King</fullName>
                <default>true</default>
                <label>King</label>
            </value>
            <value>
                <fullName>Queen</fullName>
            </value>
            <value>
                <fullName>Double</fullName>
            </value>
            <value>
                <fullName>Twin</fullName>
            </value>
            <value>
                <fullName>Single</fullName>
            </value>
            <value>
                <fullName>Disability</fullName>
            </value>
            <value>
                <fullName>Don&#39;t Care</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>