ido-tth/main/default/objects/Contact/fields/tth_preference_hotel_Smoking_Preference__c.field-meta.xml
<CustomField>
    <fullName>tth_preference_hotel_Smoking_Preference__c</fullName>
    <description>Hotel preferences - smoking or non-smoking room</description>
    <label>Smoking Preference</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tth_Smoking_Preferences</valueSetName>
    </valueSet>
</CustomField>