ido-tth/main/default/objects/Contact/fields/tth_preference_rental_Car_Transmission__c.field-meta.xml
<CustomField>
    <fullName>tth_preference_rental_Car_Transmission__c</fullName>
    <description>Rental (car) preference - vehicle transmission type</description>
    <label>Car Transmission</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Automatic</fullName>
                <default>true</default>
                <label>Automatic</label>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
            <value>
                <fullName>Don&#39;t Care</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>