ido-tth/main/default/objects/Contact/fields/tth_preference_rental_Car_Type__c.field-meta.xml
<CustomField>
    <fullName>tth_preference_rental_Car_Type__c</fullName>
    <description>Rental (car) preference - car size</description>
    <label>Car Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Economy Car</fullName>
                <default>true</default>
                <label>Economy Car</label>
            </value>
            <value>
                <fullName>Compact Car</fullName>
            </value>
            <value>
                <fullName>Intermediate Car</fullName>
            </value>
            <value>
                <fullName>Standard Car</fullName>
            </value>
            <value>
                <fullName>Full-size Car</fullName>
            </value>
            <value>
                <fullName>Intermediate SUV</fullName>
            </value>
            <value>
                <fullName>Standard SUV</fullName>
            </value>
            <value>
                <fullName>Any Car Class</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>