ido-tth/main/default/objects/Contact/fields/tth_preference_rental_Smoking_Preference__c.field-meta.xml
<CustomField>
    <fullName>tth_preference_rental_Smoking_Preference__c</fullName>
    <description>Rental (car) preferences - smoking preference</description>
    <label>Smoking Preference</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tth_Smoking_Preferences</valueSetName>
    </valueSet>
</CustomField>