ido-tth/main/default/objects/Contact/fields/tth_Profile_completion__c.field-meta.xml
<CustomField>
    <fullName>tth_Profile_completion__c</fullName>
    <description>Percentage completion of the traveler&#39;s profile</description>
    <label>Profile completion</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>