ido-tth/main/default/objects/Contact/fields/tth_Sum_All_Loyalty_Event_Points__c.field-meta.xml
<CustomField>
    <fullName>tth_Sum_All_Loyalty_Event_Points__c</fullName>
    <description>Sum of all loyalty event points except Status Points - Used in the Current Points Level.  Can include subtraction of points when done via points redemption loyalty event</description>
    <label>Sum All Loyalty Event Points</label>
    <summarizedField>tth_Loyalty_Event__c.tth_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>tth_Loyalty_Event__c.tth_Type__c</field>
        <operation>equals</operation>
        <value>Standard Points, Status Points, Points Redemption</value>
    </summaryFilterItems>
    <summaryForeignKey>tth_Loyalty_Event__c.tth_Traveler__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>