ido-tth/main/default/objects/Contact/fields/tth_Traveler_Value_Score__c.field-meta.xml
<CustomField>
    <fullName>tth_Traveler_Value_Score__c</fullName>
    <defaultValue>425</defaultValue>
    <description>ADARA Traveler Value Score is based on a 360-degree view of customers’ behaviors and needs across the global travel ecosystem, over time. Activating ADARA Traveler Value Score in marketing, e-commerce, business intelligence and customer service is the first step to extract maximum lifetime customer value. See: https://adara.com/adara-traveler-value-score/</description>
    <inlineHelpText>Score is based on a 360-degree view of customers’ behaviours and needs across the global travel ecosystem, over time.</inlineHelpText>
    <label>Traveler Value Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>