ido-tth/main/default/objects/Contact/fields/tth_Trip_Stage__c.field-meta.xml
<CustomField>
    <fullName>tth_Trip_Stage__c</fullName>
    <defaultValue>&quot;PreTrip&quot;</defaultValue>
    <description>Demo triggering field - Used to show where within the demo journey we are.  Used to change the &quot;state&quot; of the demo and may impact items such as Component Visibility, Trigger process builder to create needed records, provides context to the Chatbot for context specific menus</description>
    <label>Trip Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tth_Travel_Stage</valueSetName>
    </valueSet>
</CustomField>