ido-tth/main/default/objects/Contact/fields/tth_Trip_Sub_Stage__c.field-meta.xml
<CustomField>
    <fullName>tth_Trip_Sub_Stage__c</fullName>
    <description>Defines the sub stage of the travelers journey</description>
    <label>Trip Sub-Stage</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>tth_Trip_Stage__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Trip_Sub_Stage</valueSetName>
    </valueSet>
</CustomField>