ido-tth/main/default/objects/Contact/fields/tth_VIP_Traveler__c.field-meta.xml
<CustomField>
    <fullName>tth_VIP_Traveler__c</fullName>
    <description>The guest has been deemed to be of high importance</description>
    <label>VIP Traveler</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tth_Yes_No</valueSetName>
    </valueSet>
</CustomField>